# mlip.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wasm.yml  ci.yml  website.yml  wheels.yml
cmake/: PythonBindings.cmake  mlipcppConfig.cmake.in
examples/: CMakeLists.txt  backend_benchmark.cpp  c_api_test.c  cpp_api_test.cpp  fortran_api_test.f90  python_ase.py  python_basic.py  python_comparison.py  simple_inference.cpp
geometries/: si.xyz  urea.cif  urea.xyz  urea_molecule.xyz  water.xyz
gguf/: LICENSE  README.md
include/mlipcpp/: backend.h  io.h  mlipcpp.h  mlipcpp.hpp  model.h  neighbor_list.h  system.h  timer.h
python/mlipcpp/: __init__.py  ase.py
scripts/: benchmark_backends.sh  benchmark_graph_inference_forces.py  benchmark_pet_full_torch_compile.py  build_wasm.sh  calc_energy_pytorch.py  convert_cif_to_extxyz.py  convert_models.py  convert_pet_mad.py  publish_ggufs.py  test_all_models.py  test_all_models.sh  test_stress_fd.py
scripts/export_pytorch/: __init__.py  cli.py  compare_traces.py  debug_graph_eval.py  debug_pet_trace.py  decompositions.py  dimension_mapper.py  export_pet_energy.py  export_pet_full.py  export_pet_gguf.py  export_transformer_validation.py  fx_converter.py  graph_capture.py  graph_ir.py  op_registry.py  test_capture.py  test_full_graph.py  test_pet_export.py  torchscript_converter.py
src/: CMakeLists.txt  ggml_attention.cpp  ggml_attention.h
src/api/c/: mlipcpp_api.cpp
src/api/cpp/: mlipcpp_cpp.cpp
src/api/fortran/: mlipcpp.f90
src/api/python/: mlipcpp_bindings.cpp
src/api/wasm/: mlipcpp_wasm.cpp
src/core/: backend.cpp  backend.h  ggml_utils.cpp  ggml_utils.h  gguf_loader.cpp  gguf_loader.h  log.h  neighbor_list.cpp  system.cpp  timer.cpp
src/io/: xyz.cpp
src/models/: model.cpp
src/models/pet/: pet.cpp  pet.h  pet_batch.cpp  pet_batch.h  pet_graph.h  pet_layers.cpp  pet_types.h
src/runtime/: graph_interpreter.cpp  graph_interpreter.h  graph_ir.cpp  graph_ir.h  graph_model.cpp  graph_model.h
tests/: CMakeLists.txt  test_auto_vs_manual.cpp  test_backend_selection.cpp  test_full_export.cpp  test_ggml_layout.cpp  test_graph_interpreter.cpp  test_graph_model.cpp  test_io.cpp  test_neighbor_list.cpp  test_pet.cpp  test_pet_gradients.cpp  test_python_api.py  test_system.cpp
website/: .gitignore  bench.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
website/src/: App.css  App.svelte  App.tsx  bench-main.ts  index.css  main.ts  vite-env.d.ts
website/src/components/: EditOverlay.svelte  EditPanel.svelte  EditorHelp.svelte  EnergyPlot.svelte  MDParams.svelte  ModelLoader.svelte  MolecularDynamics.css  MolecularDynamics.tsx  OptParams.svelte  PeriodicTable.svelte  RunControls.svelte  Segmented.svelte  Stats.svelte  StructureLoader.svelte  StructureViewer.css  StructureViewer.tsx  VibrationsPanel.svelte  Viewer.svelte  ViewerControls.svelte  XyzEditorModal.svelte
website/src/lib/chem/: bonds.ts  cell.ts  elements.ts  pubchem.ts  sdf.ts  supercell.ts  xyz.ts
website/src/lib/data/: samples.ts
website/src/lib/editor/: editorMachine.svelte.ts  fragments.ts  ghostFlash.ts  hydrogens.ts  transform.svelte.ts
website/src/lib/molview/: Selection.ts  Stage.ts  StructureObject.ts  UnitCell.ts  adapter.ts  impostorSettings.ts  lighting.ts  materialStyles.ts
website/src/lib/molview/data/: bonds.ts  colors.ts  elements.ts  jmolColors.ts  types.ts
website/src/lib/molview/plugins/: PathTracerPlugin.ts
website/src/lib/molview/representations/: BallAndStick.ts  ImpostorBallAndStick.ts  ImpostorSpacefill.ts  Spacefill.ts  Tube.ts  Wireframe.ts  types.ts
website/src/lib/ngl/: viewer.ts
website/src/lib/stores/: simulation.svelte.ts
website/src/lib/vib/: jacobi.ts  modes.ts  projector.ts
website/src/lib/worker/: mdWorker.ts  simulation.ts
website/src/styles/: app.css
website/src/workers/: mdWorker.ts
