[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mlipcpp"
version = "0.1.2"
description = "Fast C++ implementation of Machine Learning Interatomic Potentials"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Peter Spackman", email = "peterspackman@fastmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
license = { file = "LICENSE" }
dependencies = ["numpy >=1.24.0"]

[project.optional-dependencies]
ase = ["ase >=3.22.0"]
test = ["pytest", "ase >=3.22.0"]

[project.urls]
Homepage = "https://github.com/peterspackman/mlip.cpp"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build-{wheel_tag}"
wheel.py-api = "cp312"
cmake.targets = ["_mlipcpp"]

[tool.scikit-build.cmake.define]
MLIPCPP_BUILD_PYTHON = "ON"
MLIPCPP_BUILD_EXAMPLES = "OFF"
MLIPCPP_BUILD_TESTS = "OFF"
# Build portable wheels: -march=native bakes the build host's CPU features
# (e.g. AVX-512 on some Azure VMs) into the binary, causing SIGILL on test
# or end-user machines that lack those instructions. ggml falls back to a
# conservative baseline + runtime feature detection when NATIVE is OFF.
GGML_NATIVE = "OFF"

[tool.cibuildwheel]
# One stable-ABI wheel per platform (cp312-abi3 is forward compatible with 3.12+).
build = ["cp312-*"]
skip = ["*musllinux*", "pp*"]
build-verbosity = 1
build-frontend = "build[uv]"
test-command = 'python -c "import mlipcpp, numpy; print(\"mlipcpp\", mlipcpp.version())"'

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
